# slab-cli

./: Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: ci.yml
crates/slab-cli/: Cargo.toml
crates/slab-cli/src/: main.rs  output.rs
crates/slab-cli/src/cmd/: api.rs  auth.rs  comment.rs  links.rs  mod.rs  open.rs  post.rs  search.rs  sync.rs  topic.rs  tree.rs  vault_cmd.rs
crates/slab-core/: Cargo.toml
crates/slab-core/src/: api.rs  config.rs  delta.rs  error.rs  lib.rs  store.rs  vault.rs
crates/slab-core/src/api/: client.rs  types.rs
crates/slab-core/src/delta/: from_delta.rs  to_delta.rs
