[package]
name = "slab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "slab"
path = "src/main.rs"

[dependencies]
slab-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
console.workspace = true
indicatif.workspace = true
similar.workspace = true
arboard.workspace = true
opener.workspace = true
clap_complete.workspace = true
