[package]
name = "slab-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
rusqlite.workspace = true
pulldown-cmark.workspace = true
sha2.workspace = true
dirs.workspace = true
slug.workspace = true
toml.workspace = true
